--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,11 @@ dist
 dist-ssr
 *.local
 .env
-
+.env.local
+.env.development
+.env.test
+.env.production
+.env.*
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
